Add SEO descriptions

--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -1,6 +1,7 @@
 ---
 title: Contracts
-description: Deliver subsets of your enterprise supergraph
+subtitle: Deliver different subsets of your enterprise supergraph
+description: GraphOS contracts allow you to deliver subsets of your federated graph to consumers using the @tag directive.
 ---
 
 > **This feature is available only with an [Enterprise plan](https://www.apollographql.com/pricing/).**
