--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -1,6 +1,7 @@
 ---
 title: Configuring schema checks
-description: Define exactly what schema changes are checked against
+subtitle: Define exactly what schema changes are checked against
+description: Learn how to customize your graphQL schema checks using Apollo GraphOS Studio or Rover CLI.
 ---
 
 After you [enable schema checks](./schema-checks/) for your graph, you can customize their behavior to suit your use case. For example, you can:
