--- a/src/content/graphos/delivery/launches.mdx
+++ b/src/content/graphos/delivery/launches.mdx
@@ -20,7 +20,7 @@ A launch might consist entirely of changes that don't affect your supergraph's p
 
 ## Launch status
 
-Your supergraph's Launches page in Apollo Studio enables you to observe and monitor the schema delivery process for both in-progress and past launches:
+Your supergraph's Launches page in GraphOS Studio enables you to observe and monitor the schema delivery process for both in-progress and past launches:
 
 <img className="screenshot" src="../img/launches-page.jpg" width="500" />
 
