--- a/src/content/graphos/delivery/github-integration.mdx
+++ b/src/content/graphos/delivery/github-integration.mdx
@@ -27,7 +27,11 @@ If you haven't already, [install the Rover CLI](/rover/getting-started/) in your
 
 Next, make sure your CI configuration includes a step to execute schema checks. You do this by adding the `rover subgraph check` command directly as a step in your CI.
 
-> For example CI configurations that do this, [see the Rover docs](/rover/ci-cd/).
+<Tip>
+
+For example CI configurations, [see the Rover docs](/rover/ci-cd/).
+
+</Tip>
 
 The `rover subgraph check` command checks for differences in your schema between what's on your current branch and the last version you uploaded to Apollo Studio. If you've removed or changed any types or fields, the command checks whether those changes break any queries that your clients have made recently. If your changes do break any queries, the check fails.
 
