--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -16,7 +16,12 @@ GraphOS provides **schema linting** to help you enforce formatting conventions a
 - **If you set up [schema checks](./schema-checks/) for your graph,** linting runs as a separate check type alongside build and operation checks.
 - You can also perform [one-off linting with the Rover CLI](#one-off-linting-with-the-rover-cli).
 
-> **Note:** Currently, GraphOS linting only analyzes parts of your modified schema that differ from your _published_ schema. It does not flag any existing violations.
+<Note>
+
+GraphOS schema linting only analyzes parts of your modified schema that differ from your published schema. It does not flag any existing violations.
+
+</Note>
+
 ## Configuring the linter
 
 The GraphOS schema linter uses a [predefined collection of rules](./linter-rules/) to identify issues with proposed schema changes.
@@ -50,9 +55,8 @@ This page organizes linter options into the following categories:
   - Using a _non_-approved value for `name` raises the `TAG_DIRECTIVE_USES_UNKNOWN_NAME` violation.
 - **Linter Rules** enables you to [set the severity level](#setting-severity-levels) for violations of each rule.
 
-If you're viewing configuration for a single variant, each category displays a **Use Graph Settings** toggle in the upper right. If this toggle is enabled, the variant uses whatever graph-wide defaults are set for that category.
+If you're viewing configuration for a single variant, each category displays a **Use Graph Settings** toggle in the upper right. If this toggle is enabled, the variant uses whatever graph-wide defaults are set for that category. At this time, the **Use Graph Settings** toggle is _always_ enabled for _all_ variants.
 
-> ⚠️ At this time, the **Use Graph Settings** toggle is _always_ enabled for _all_ variants.
 ### Setting severity levels
 
 The **Linter Rules** category of your linter configuration displays all predefined rules and the current **severity** level for each:
@@ -86,16 +90,28 @@ If you set up [schema checks](./schema-checks) for your graph, schema linting au
     width="500"
 />
 
-> **For the best experience running linter checks, install v0.16 or later of the Rover CLI.** Earlier versions of Rover can't correctly output the results of linter checks (but they do correctly exit with a nonzero code if a linter check fails).
+
+<Tip>
+
+**For the best experience running linter checks, install v0.16 or later of the Rover CLI.** Earlier versions of Rover can't correctly output the results of linter checks, but they do correctly exit with a nonzero code if a linter check fails.
+
+</Tip>
+
 ### One-off linting
 
-> ⚠️ **One-off linting requires v0.16 or later of the Rover CLI.** [Install the latest version.](/rover/getting-started)
+<Note>
+
+**One-off linting requires v0.16 or later of the Rover CLI.** [Install the latest version.](/rover/getting-started)
+
+</Note>
+
 The Rover CLI provides `subgraph lint` and `graph lint` commands for running the GraphOS linter against your local schema changes.
 
 - Use `subgraph lint` for subgraphs in a supergraph.
 - Use `graph lint` for [monographs](../graphs/#monographs) (not recommended).
 
-> ⚠️ The `rover subgraph lint` and `rover graph lint` commands validate all [linter rules](./linter-rules) _except_ for [composition rules](./linter-rules#composition-rules). Use [`rover subgraph check`](/rover/commands/subgraphs#subgraph-check) or [`rover supergraph compose`](/rover/commands/supergraphs#supergraph-compose) to validate composition rules locally.
+The `rover subgraph lint` and `rover graph lint` commands validate all [linter rules](./linter-rules) _except_ for [composition rules](./linter-rules#composition-rules). Use [`rover subgraph check`](/rover/commands/subgraphs#subgraph-check) or [`rover supergraph compose`](/rover/commands/supergraphs#supergraph-compose) to validate composition rules locally.
+
 ```bash title="Example command"
 rover subgraph lint --name products --schema ./products-schema.graphql my-graph@my-variant
 ```
