Update descriptions and subtitles

--- a/src/content/graphos/metrics/datadog-integration.mdx
+++ b/src/content/graphos/metrics/datadog-integration.mdx
@@ -1,7 +1,7 @@
 ---
 title: Forwarding metrics to Datadog
 subtitle: Integrate your supergraph's performance metrics with Datadog
-description: Integrate Apollo with Datadog to forward GraphOS metrics. Visualize and set up alerts with Datadog for enhanced performance monitoring.
+description: Integrate Apollo with Datadog to forward GraphQL metrics from GraphOS. Visualize and set up alerts with Datadog for enhanced performance monitoring.
 ---
 
 <EnterpriseFeature />
