--- a/src/content/graphos/metrics/notifications/notification-setup.mdx
+++ b/src/content/graphos/metrics/notifications/notification-setup.mdx
@@ -1,7 +1,7 @@
 ---
 title: Setting up GraphOS notifications
-subtitle: Set up notifications for your graph's performance, schema changes, and more
-description: Set up notifications for your graph's performance, schema changes, and more. Stay updated and address issues effectively using custom alerts.
+subtitle: Set up notifications for graph performance, schema changes, and more
+description: Set up notifications for your GraphQL graph's performance, schema changes, and more. Stay updated and address issues effectively using custom alerts.
 ---
 
 GraphOS can notify your team about changes to your graph and its performance. These notifications help you stay up to date and address issues as they arise.
@@ -74,7 +74,7 @@ After you configure a channel for your organization, you can use it to send any 
 
 ### Slack
 
-To set up Slack notifications, you first configure an incoming webhook in Slack, then provide that webhook's URL to Apollo Studio.
+To set up Slack notifications, you first configure an incoming webhook in Slack, then provide that webhook's URL to GraphOS Studio.
 
 #### 1. Create an incoming Slack hook
 
