--- a/src/content/graphos/metrics/operation-signatures.mdx
+++ b/src/content/graphos/metrics/operation-signatures.mdx
@@ -1,7 +1,7 @@
 ---
 title: Operation signatures
 subtitle: Understand how GraphOS identifies equivalent operations
-description: Learn how Apollo generates operation signatures to group functionally identical operations for accurate performance analysis.
+description: Learn how Apollo generates GraphQL operation signatures to group functionally identical operations for accurate performance analysis.
 ---
 
 When you're viewing your graph's [operation metrics](./operations), GraphOS Studio groups operations based on the set of fields they include, _not_ based on operation names. That means that operations with the same name but different sets of fields are displayed separately:
