--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -1,7 +1,7 @@
 ---
 title: Operation metrics in GraphOS
 subtitle: Understand your operation metrics, including request rate and latency
-description: Apollo GraphOS empowers you to visualize key metrics such as request rate, latency, and more for in-depth performance analysis of your graph.
+description: Apollo GraphOS empowers you to visualize key GraphQL metrics such as request rate, latency, and more for in-depth performance analysis of your graph.
 ---
 
 <Note>
@@ -302,7 +302,7 @@ If you [enable trace reporting](#enabling-traces) in your subgraphs, GraphOS Stu
 <img
   src="../img/traces-tab.jpg"
   className="screenshot"
-  alt="Traces tab for an operation in Apollo Studio"
+  alt="Traces tab for an operation in GraphOS Studio"
   width="600"
 />
 
