--- a/src/content/graphos/metrics/client-awareness.mdx
+++ b/src/content/graphos/metrics/client-awareness.mdx
@@ -1,7 +1,7 @@
 ---
 title: Segmenting metrics by client
 subtitle: Understand how different clients use your graph
-description: Leverage client awareness in GraphOS Studio to view operation metrics segmented by clients, including client versions.
+description: Leverage client awareness in GraphOS Studio to view GraphQL operation metrics segmented by clients, including client versions.
 ---
 
 In GraphOS Studio, you can view GraphQL operation metrics broken down by the different clients—such as your web, iOS, and Android apps—that execute those operations. This feature, called **client awareness**, becomes increasingly useful as you create additional clients that consume your supergraph.
