--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -1,7 +1,7 @@
 ---
 title: Field usage in GraphOS
-subtitle: Understand field usage metrics including which clients request which fields and how often
-description: Explore field usage metrics in Apollo GraphOS Studio. Analyze field requests and executions to understand your graph's performance.
+subtitle: Understand field usage metrics including which clients and operations request which fields and how often
+description: Explore GraphQL schema field usage in Apollo GraphOS Studio. Analyze field requests and executions to understand your graph's performance.
 ---
 
 <Note>
