--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -1,7 +1,7 @@
 ---
 title: Sending metrics to GraphOS
 subtitle: Learn how to report operation and field usage metrics to GraphOS
-description: Learn how to report operation and field usage metrics from the Apollo Router, Apollo Server, and third-party server libraries.
+description: Learn how to report GraphQL operation and field usage metrics from the Apollo Router, Apollo Server, and third-party server libraries.
 ---
 
 GraphOS Studio offers visualizations of metrics like request rate, latency, and more to help you analyze your supergraph's performance. Studio also lets you analyze how clients are using individual fields in your GraphQL requests. To analyze operation metrics and field usage in Studio, you first need to report them to GraphOS.
