--- a/src/content/graphos/metrics/notifications/performance-alerts.mdx
+++ b/src/content/graphos/metrics/notifications/performance-alerts.mdx
@@ -1,5 +1,5 @@
 ---
-title: Performance alerts from GraphOS Studio
+title: Performance alerts from GraphOS
 subtitle: Receive notifications whenever metrics exceed defined thresholds
 description: Configure alerts to receive notifications in Slack or Pagerduty instance when specific operation metrics surpass defined thresholds.
 ---
