Reformat custom Enterprise text

--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -14,13 +14,25 @@ If you have a [self-hosted supergraph](../quickstart/self-hosted), you need to [
 
 Apollo also offers a [Datadog integration](./datadog-integration) to forward your graph's performance metrics to your Datadog account.
 
-<EnterpriseFeature
-  text={`Reporting metrics from [Apollo Server](/apollo-server) or a [monograph](../graphs/#monographs) requires an [Enterprise or legacy Team plan](../orgs/plans).\n\nThe following require an [Enterprise plan](https://www.apollographql.com/pricing/):
+<EnterpriseFeature>
+
+The following require an [Enterprise plan](https://www.apollographql.com/pricing/):
+
+<br />
+
 - Connecting a self-hosted router to GraphOS
 - Forwarding metrics to Datadog
-\n\nIf your organization doesn't currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
-`}
-/>
+
+<br />
+
+Reporting metrics from [Apollo Server](/apollo-server) or a [monograph](../graphs/#monographs)
+requires an [Enterprise _or_ legacy Team plan](../orgs/plans).
+
+If your organization
+doesn't currently have an Enterprise plan, you can test out this functionality by
+signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
+
+</EnterpriseFeature>
 
 ## Insights and analysis
 
