--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -6,11 +6,16 @@ description: Learn how to report operation and field usage metrics from the Apol
 
 GraphOS Studio offers visualizations of metrics like request rate, latency, and more to help you analyze your supergraph's performance. Studio also lets you analyze how clients are using individual fields in your GraphQL requests. To analyze operation metrics and field usage in Studio, you first need to report them to GraphOS.
 
-<EnterpriseFeature
-  text={`- Reporting metrics from [Apollo Server](/apollo-server) or a [monograph](../graphs/#monographs) requires an [Enterprise or legacy Team plan](../orgs/plans).\n- Connecting a self-hosted router to GraphOS requires an [Enterprise plan](https://www.apollographql.com/pricing/).\n\n
-  If your organization doesn't currently have an Enterprise plan, you can test it out by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
-`}
-/>
+<EnterpriseFeature>
+
+- Reporting metrics from [Apollo Server](/apollo-server) or a [monograph](../graphs/#monographs) requires an [Enterprise or legacy Team plan](../org/plans).
+- Connecting a self-hosted router to GraphOS requires an [Enterprise plan](https://www.apollographql.com/pricing/).
+
+<br/>
+
+If your organization doesn't currently have an Enterprise plan, you can test it out by signing up for a free [Enterprise trial](https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content).
+
+</EnterpriseFeature>
 
 ## Reporting operation metrics
 
