--- a/src/content/technotes/TN0004-router-authentication.mdx
+++ b/src/content/technotes/TN0004-router-authentication.mdx
@@ -19,15 +19,19 @@ When using the Apollo Router as the entry point to your federated supergraph, yo
 - [Use the JWT Authentication plugin](#use-the-jwt-authentication-plugin) to your supergraph.
 - [Use a coprocessor](#use-a-coprocessor).
 
-
 In fact, we recommend you [combine all three strategies](#combining-authentication-strategies) to create a more robust authentication system!
 
 ## Use Authorization Directives
-In addition to the the approaches outlined below, you can use [authorization directives](/router/configuration/authorization/) to enforce authorization at the router layer. 
+
+In addition to the the approaches outlined below, you can use [authorization directives](/router/configuration/authorization/) to enforce authorization at the router layer.
 This allows you to authorize requests prior to them hitting your subgraphs saving on bandwidth and processing time.
 
-<EnterpriseFeature text={`This is an [Enterprise feature](/router/enterprise-features) of the Apollo Router. It requires an organization with a [GraphOS Enterprise plan](https://www.apollographql.com/pricing/).`} />
+<EnterpriseFeature>
 
+This is an [Enterprise feature](/router/enterprise-features) of the Apollo Router.
+It requires an organization with a [GraphOS Enterprise plan](https://www.apollographql.com/pricing/).
+
+</EnterpriseFeature>
 
 ```mermaid
 sequenceDiagram
@@ -60,6 +64,7 @@ Pros:
 - Declarative approach that can be adopted and maintained by each subgraph while enforced centrally
 
 Cons
+
 - Schema updates will need to be made to each subgraph to opt into this authorization model
 
 ## Authenticate in subgraphs
@@ -97,8 +102,12 @@ headers:
 
 As of Apollo Router v1.13, you can use the [JWT Authentication plugin](/router/configuration/authn-jwt) to validate JWT-based authentication tokens in your supergraph.
 
-<EnterpriseFeature text={`This is an [Enterprise feature](/router/enterprise-features) of the Apollo Router. It requires an organization with a [GraphOS Enterprise plan](https://www.apollographql.com/pricing/).`} />
+<EnterpriseFeature>
 
+This is an [Enterprise feature](/router/enterprise-features) of the Apollo Router.
+It requires an organization with a [GraphOS Enterprise plan](https://www.apollographql.com/pricing/).
+
+</EnterpriseFeature>
 
 ```mermaid
 sequenceDiagram
@@ -131,8 +140,12 @@ Cons:
 
 If you have a custom authentication strategy, you can use a [coprocessor](/router/customizations/coprocessor) to implement it.
 
-<EnterpriseFeature text={`This is an [Enterprise feature](/router/enterprise-features) of the Apollo Router. It requires an organization with a [GraphOS Enterprise plan](https://www.apollographql.com/pricing/).`} />
+<EnterpriseFeature>
 
+This is an [Enterprise feature](/router/enterprise-features) of the Apollo Router.
+It requires an organization with a [GraphOS Enterprise plan](https://www.apollographql.com/pricing/).
+
+</EnterpriseFeature>
 
 ```mermaid
 sequenceDiagram
@@ -189,7 +202,6 @@ Pros:
 Cons:
 
 - The initial lift of implementing a coprocessor is non-trivial, but once it's in place you can leverage it for any number of router customizations.
-
 
 ## Combining authentication strategies
 
