--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -26,7 +26,7 @@ The following require an [Enterprise plan](https://www.apollographql.com/pricing
 <br />
 
 Reporting metrics from [Apollo Server](/apollo-server) or a [monograph](../graphs/#monographs)
-requires an [Enterprise _or_ legacy Team plan](../org/plans).
+requires an [Enterprise _or_ legacy Team plan](../orgs/plans).
 
 If your organization
 doesn't currently have an Enterprise plan, you can test out this functionality by
