Apply suggestions from code review
Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -1,7 +1,7 @@
 ---
 title: Configuring schema checks
-subtitle: Define exactly what schema changes are checked against
-description: Learn how to customize your graphQL schema checks using Apollo GraphOS Studio or Rover CLI.
+subtitle: Define how schema checks are applied to schema changes
+description: Learn how to customize your GraphQL schema checks using Apollo GraphOS Studio or Rover CLI.
 ---
 
 After you [enable schema checks](./schema-checks/) for your graph, you can customize their behavior to suit your use case. For example, you can:
