--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -76,7 +76,7 @@ Contract routers can safely connect to the same subgraph instances as any other 
 
 <Note>
 
-Any `@tag`s that are present in a source variant's supergraph schema are _also_ present in a contract variant's supergraph schema.
+Any `@tag` present in a source variant's supergraph schema is _also_ present in a contract variant's supergraph schema.
 
 </Note>
 
@@ -338,7 +338,7 @@ Updates to your contract schema are automatically fetched by your managed [contr
 
 <Note>
 
-You can't change an existing contract's name or source variant. Instead, you can create a _new_ contract (and delete the existing contract variant if you no longer need it).
+You can't change an existing contract's name or source variant. Instead, you can create a _new_ contract and delete the existing contract variant if you no longer need it.
 
 </Note>
 
