--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -1,6 +1,6 @@
 ---
 title: Schema checks
-subtitle: Make sure all proposed changes to your schema are safe
+subtitle: Validate all proposed changes to your schema are safe
 description: Use GraphOS Schema checks to identify and validate potential breaking changes in your GraphQL schema before deployment.
 ---
 
@@ -44,8 +44,7 @@ To enable schema checks for your supergraph, do the following if you haven't yet
 
    <Caution>
 
-   If GraphOS has no operation metrics to compare against, all potentially
-   dangerous schema changes result in a failed check!
+   If GraphOS has no operation metrics to compare against, all potentially dangerous schema changes result in a failed check.
 
    </Caution>
 
@@ -60,7 +59,7 @@ Let's say you've made local changes to one of your subgraph schemas. After you [
 
 <Note>
 
-If you have a [monograph](../graphs/#monographs) (not recommended), use [`rover graph`](/rover/commands/graphs/#checking-schema-changes) commands instead of `rover subgraph` commands.
+If you have a [monograph](../graphs/#monographs) (which is not recommended), use [`rover graph`](/rover/commands/graphs/#checking-schema-changes) commands instead of `rover subgraph` commands.
 
 </Note>
 
