Address review suggestions

--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -1,7 +1,7 @@
 ---
 title: Schema linter rules
 subtitle: Reference
-description: Reference for GraphOS schema linting rules with examples, ensuring GraphQL schema naming conventions and best practices.
+description: Reference for GraphOS schema linting rules with examples
 ---
 
 This reference lists the rules that you can enforce with [GraphOS schema linting](./schema-linter/), along with the code that GraphOS returns for each rule violation.
