--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -227,7 +227,7 @@ flowchart LR;
 
 Your graph has been created.
 
-Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. For details, see [Publishing schemas to GraphOS](../delivery/).
+Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. For details, see [Publishing schemas to GraphOS](../delivery/publishing-schemas/).
 
 ## Variants
 
@@ -248,4 +248,4 @@ See [this section](./federated-graphs/#adding-a-variant).
 
 ## Publishing schemas
 
-See [Publishing schemas to GraphOS](../delivery/).
+See [Publishing schemas to GraphOS](../delivery/publishing-schemas/).
