--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -253,7 +253,7 @@ The Changelog page in Studio displays a timeline of changes made to your graph's
   width="450"
 />
 
-**Only schema changes that you publish to Studio are included in this timeline**, which is one of the most important reasons to [include schema publishing in your continuous delivery pipeline](../delivery/#publishing-with-continuous-delivery).
+**Only schema changes that you publish to Studio are included in this timeline**, which is one of the most important reasons to [include schema publishing in your continuous delivery pipeline](../delivery/publishing-schemas/#publish-with-continuous-delivery).
 
 ## Managing access permissions
 
