--- a/src/content/graphos/basics/graphs/updating.mdx
+++ b/src/content/graphos/basics/graphs/updating.mdx
@@ -62,7 +62,7 @@ For details on each Apollo Router version's corresponding Apollo _Federation_ ve
 
 ## 2. Update your build pipeline
 
-Whenever you make an operational change to your graph (such as [publishing changes to a subgraph schema](../delivery/#subgraph-schemas)), GraphOS initiates a **build** that composes your graph's new _supergraph_ schema. From [Apollo Studio](https://studio.apollographql.com/), you can configure which version of Apollo Federation the build pipeline uses to perform this composition.
+Whenever you make an operational change to your graph (such as [publishing changes to a subgraph schema](../delivery/publishing-schemas/#publish-subgraph-schemas)), GraphOS initiates a **build** that composes your graph's new _supergraph_ schema. From [Apollo Studio](https://studio.apollographql.com/), you can configure which version of Apollo Federation the build pipeline uses to perform this composition.
 
 > GraphOS enables you to choose between _minor_ versions of Federation (such as `2.1`). Each option automatically uses the latest supported _patch_ release of that minor version (such as `2.1.4`).
 >
