--- a/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
+++ b/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Mocking graph functionality to unblock client development"
+title: 'Mocking graph functionality to unblock client development'
 id: TN0020
 tags: [gateway, schema-design, federation]
 ---
@@ -18,7 +18,7 @@ If you're creating an entirely new graph and corresponding schema, it's importan
 
 For new schemas, we recommend using [this sample by GitHub user setchy](https://github.com/setchy/apollo-server-4-mocked-federation) to mock your new schema in its entirety. This provides your client teams with a local (or hosted) instance of the schema to query against and begin mocking UI components with the mocked data.
 
-To use this sample, you need to [publish your schema to Apollo GraphOS](/graphos/delivery/). For details on the benefits of publishing to GraphOS, [see below](#why-use-graphos-for-a-mocked-server).
+To use this sample, you need to [publish your schema to Apollo GraphOS](/graphos/delivery/publishing-schemas/). For details on the benefits of publishing to GraphOS, [see below](#why-use-graphos-for-a-mocked-server).
 
 To get started with the sample, run the following:
 
@@ -47,7 +47,7 @@ The process for making changes to an existing schema is similar to that for crea
 
 To mock proposed changes (such as adding a new type/field), we recommend using [this sample created by Apollo's Solutions Architecture team](https://github.com/apollosolutions/apollo-faker-demo). This sample requires a preexisting GraphQL API to be running. It works by allowing for a "patched" or modified version of your subgraph to run locally with mocked data, while using the remote API for all other data.
 
-You'll need to [publish your schema to GraphOS](/graphos/delivery/) to use this sample. For details on the benefits of publishing to GraphOS, [see below](#why-use-graphos-for-a-mocked-server).
+You'll need to [publish your schema to GraphOS](/graphos/delivery/publishing-schemas/) to use this sample. For details on the benefits of publishing to GraphOS, [see below](#why-use-graphos-for-a-mocked-server).
 
 To get started, run:
 
