Embed youtube video from Dan

--- a/src/content/technotes/TN0044-graphql-and-rest-together.mdx
+++ b/src/content/technotes/TN0044-graphql-and-rest-together.mdx
@@ -4,6 +4,8 @@ id: TN0044
 tags: [architecture-patterns]
 ---
 
+<iframe width="100%" height="400" src="https://www.youtube.com/embed/5DVi99KPALo?si=2O3TpHiAbvXQhfuG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 ## GraphQL versus REST is the wrong question
 
 It is common to hear GraphQL and REST pitted against each other as competing technologies. While this may be true in some cases, most organizations who have adopted GraphQL utilize both for different purposes and at various layers of the stack.
